--- a/manifest.json
+++ b/manifest.json
@@ -11,9 +11,9 @@
     },
     "action": {
       "default_icon": {
-        "16": "icon.png",
-        "48": "icon.png",
-        "128": "icon.png"
+        "16": "icon2.png",
+        "48": "icon2.png",
+        "128": "icon2.png"
       }
     }
     
